<resources>
    <string name="app_name">GymTracker</string>

    <string name="menu_exercises">Упражнения</string>

    <string name="list_is_empty">Список пуст</string>

    <string name="exercise_name_label">Название</string>
    <string name="exercise_description_label">Описание</string>
    <string name="exercise_has_duration">Измеряется в секундах</string>
    <string name="could_not_load_data">Не удалось загрузить данные</string>
    <string name="exercise_name_is_required">Название упражнения обязательно</string>

    <string name="new_exercise_label">Новое упражнение</string>
    <string name="exercise_label">Упражнение</string>
    <string name="update_exercise_label">Редактирвовать упражнение</string>
    <string name="delete">Удалить</string>
    <string name="move_up">Поднять</string>
    <string name="move_down">Опустить</string>
    <string name="delete_exercise_completed">Упражнение удалено!</string>
    <string name="exercise_saved">Упражнение сохранено!</string>
    <string name="menu_training_plan">Тренировочный план</string>
    <string name="menu_trainings">Тренировки</string>
    <string name="exercise_selector_label">Упражнение</string>
    <string name="add_training_plan_item">Добавить подход</string>
    <string name="choose_exercise">Выберите упражнение</string>
    <string name="add_exercise_label">Добавить упражнение</string>

    <string name="weight">Вес</string>
    <string name="count">Раз</string>
    <string name="duration">Сек</string>
    <string name="save_button">Сохранить</string>
    <string name="set_without_duration">%1$d подход: %2$.2f кг —\u0020</string>
    <string name="set_without_duration_once">%1$.1f кг —\u0020</string>
    <string name="set_with_duration">%1$d подход:\u0020</string>
    <string name="start_training">Начать тренировку</string>
    <string name="past_trainings">Предыдущие тренировки</string>
</resources>