<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="ru.sweetmilk.gymtracker.fragments.trainings.TrainingsViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/start_training_btn_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/start_training_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableLeft="@drawable/ic_start"
                android:padding="16dp"
                android:text="@string/start_training"
                android:textAllCaps="true"
                android:textSize="20sp"
                android:onClick="@{() -> viewModel.startTraining()}"/>
        </FrameLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bottom_sheet"
            style="@style/Widget.Material3.BottomSheet"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="4dp"
            app:behavior_hideable="false"
            app:behavior_peekHeight="@dimen/bottom_sheet_collapsed_height"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">


            <com.google.android.material.bottomsheet.BottomSheetDragHandleView
                android:id="@+id/drag_handle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/bottom_sheet_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:gravity="center"
                android:text="@string/past_trainings"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/drag_handle" />

            <TextView
                android:id="@+id/trainings_list_empty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:gravity="center"
                android:text="@string/list_is_empty"
                android:visibility="@{viewModel.isEmpty ? View.VISIBLE : View.GONE}"
                app:layout_constraintTop_toBottomOf="@id/bottom_sheet_label" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/trainings_list"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="4dp"
                android:orientation="vertical"
                android:visibility="@{viewModel.isEmpty ? View.GONE : View.VISIBLE}"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/bottom_sheet_label" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>

    <!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:padding="8dp">-->

    <!--<Button-->
    <!--    android:id="@+id/start_training_btn"-->
    <!--    android:layout_width="match_parent"-->
    <!--    android:layout_height="wrap_content"-->
    <!--    android:layout_marginTop="8dp"-->
    <!--    android:onClick="@{() -> viewModel.createNewTraining()}"-->
    <!--    android:text="@string/start_training"-->
    <!--    app:layout_constraintTop_toTopOf="parent" />-->

    <!--<androidx.recyclerview.widget.RecyclerView-->
    <!--    android:id="@+id/trainings_list"-->
    <!--    android:layout_width="match_parent"-->
    <!--    android:layout_height="0dp"-->
    <!--    android:layout_marginTop="16dp"-->
    <!--    app:layout_constraintBottom_toBottomOf="parent"-->
    <!--    app:layout_constraintTop_toBottomOf="@+id/start_training_btn"-->
    <!--    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"-->
    <!--    android:orientation="vertical"/>-->
    <!--</androidx.constraintlayout.widget.ConstraintLayout>-->